feat(order): add redis cart implementation
- Add RedisConfig with JSON serialization
- Add CartService with CRUD operations using Redis Hash
- Add CartController with REST endpoints
- Cart expires after 24 hours of inactivity
- Fix Lombok compatibility issues with manual constructors

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
         <!-- Versions for dependencies not managed by Spring Boot -->
         <springdoc.version>2.3.0</springdoc.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <modules>
