fix: merge duplicate data keys in application.yml files
- Fix YAML parsing error in order-service, inventory-service, recommendation-service
- Combine spring.data.mongodb and spring.data.redis under single data key

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -5,14 +5,11 @@ spring:
   application:
     name: order-service
 
-  # MongoDB Configuration
+  # MongoDB and Redis Configuration
   data:
     mongodb:
       uri: mongodb://localhost:27017/orderly
       database: orderly
-
-  # Redis Configuration
-  data:
     redis:
       host: localhost
       port: 6379
