--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -5,14 +5,11 @@ spring:
   application:
     name: inventory-service
 
-  # MongoDB
+  # MongoDB and Redis Configuration
   data:
     mongodb:
       uri: mongodb://localhost:27017/orderly
       database: orderly
-
-  # Redis for caching
-  data:
     redis:
       host: localhost
       port: 6379
