--- a/recommendation-service/src/main/resources/application.yml
+++ b/recommendation-service/src/main/resources/application.yml
@@ -5,14 +5,11 @@ spring:
   application:
     name: recommendation-service
 
-  # MongoDB for order history
+  # MongoDB and Redis Configuration
   data:
     mongodb:
       uri: mongodb://localhost:27017/orderly
       database: orderly
-
-  # Redis for caching recommendations
-  data:
     redis:
       host: localhost
       port: 6379
