--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
       host: localhost
       port: 6379
 
+  # Elasticsearch
+  elasticsearch:
+    uris: localhost:9200
+
   # Kafka
   kafka:
     bootstrap-servers: localhost:9092
