--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,22 @@ services:
     networks:
       - orderly-network
 
+  # Elasticsearch - Search engine
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    container_name: orderly-elasticsearch
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - orderly-network
+
 networks:
   orderly-network:
     driver: bridge
@@ -64,3 +80,4 @@ networks:
 volumes:
   mongodb_data:
   redis_data:
+  elasticsearch_data:
