Make Elasticsearch optional - service starts without it
- Elasticsearch is now disabled by default
- Service falls back to database search when ES not available
- Added ConditionalOnProperty for ES components
- Admin product management now works without ES

--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -14,9 +14,16 @@ spring:
       host: localhost
       port: 6379
 
-  # Elasticsearch
+  # Elasticsearch (disabled by default - enable with spring.elasticsearch.enabled=true)
   elasticsearch:
+    enabled: false
     uris: localhost:9200
+  
+  # Disable auto-configuration when elasticsearch is not enabled
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.data.elasticsearch.ElasticsearchDataAutoConfiguration
+      - org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchRestClientAutoConfiguration
 
   # Kafka
   kafka:
