--- a/recommendation-service/Dockerfile
+++ b/recommendation-service/Dockerfile
@@ -1,20 +1,19 @@
 # Build stage
-FROM maven:3.9-eclipse-temurin-17 AS builder
+FROM --platform=$BUILDPLATFORM maven:3.9-eclipse-temurin-17 AS builder
 WORKDIR /app
 COPY pom.xml .
-COPY ../common-lib ../common-lib
-RUN mvn dependency:go-offline -B
+RUN mvn dependency:go-offline -B || true
 COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Runtime stage
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17-jre
 WORKDIR /app
 COPY --from=builder /app/target/*.jar app.jar
 
 # Add healthcheck
 HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
-    CMD wget -q --spider http://localhost:8084/actuator/health || exit 1
+    CMD curl -f http://localhost:8084/actuator/health || exit 1
 
 EXPOSE 8084
 ENTRYPOINT ["java", "-jar", "app.jar"]
